hard-gists/324968/run.log
=== Docker Run Log for 324968 ===
Started at: Mi 29. Okt 13:47:35 CET 2025

[2025-10-29 13:47:35] START: Running container for 324968
[2025-10-29 13:47:36] SUCCESS: Container 26e6c52a63cf9ee25a9f1ea93f40df5aa116deae545f8c978242303939b194b5 started for 324968
=== Container logs for 324968 ===
  File "/snippet.py", line 13
    print is_the_same(base, bad) # returns True
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 324968 ===
[2025-10-29 13:47:38] INFO: Container 26e6c52a63cf9ee25a9f1ea93f40df5aa116deae545f8c978242303939b194b5 has stopped
